--- a/.github/workflows/g01_training_sync.yml
+++ b/.github/workflows/g01_training_sync.yml
@@ -102,7 +102,7 @@ jobs:
           set -e
 
           git config user.name "g01-training-bot"
-          git config user.email "g01-training-bot@users.noreply.github.com"
+          git config user.email "{{EMAIL}}"
 
           git add docs/10_GOALS/G01_Target-Body-Fat/Training/data/*.csv
 
